--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "nwidart/congregatecms",
+    "name": "wychrist/congregatecms",
     "description": "",
     "authors": [
         {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
+            "name": "Congregate Developers",
+            "email": "developers@wychrist.org.au"
         }
     ],
     "extra": {
