Add docker configuration
We use these configuration to build the docker image

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "extra": {
         "laravel": {
-            "providers": [],
+            "providers": [
+            ],
             "aliases": {
 
             }
